--- a/src/main/res/values/strings_tabulky.xml
+++ b/src/main/res/values/strings_tabulky.xml
@@ -210,6 +210,7 @@ and the plaintext is cleared when a different type of the cipher is selected.</p
     <string-array name="saTVVPABCVar">
         <item/>
         <item/>
+        <item/>
     </string-array>
 
 
