--- a/src/main/res/values/strings_main.xml
+++ b/src/main/res/values/strings_main.xml
@@ -167,7 +167,7 @@ please do not hesitate to write to the author personally at <tt>vasek.potocek@gm
 
 <p>Version %s</p>
 
-<p>© 2012-2015 Vašek Potoček</p>
+<p>© 2012-2018 Vašek Potoček</p>
 
 <p>Special thanks to testers:<br/>
 – Martin Polívka<br/>
@@ -203,12 +203,18 @@ component directly.</p>
 	
 	
 <string name="tHelpNews"><![CDATA[
-<h1>Release Highlights for v2.1</h1>
+<h1>Changes in v2.2</h1>
 
-– Dictionary data packed in the main application APK<br/>
-– Android 2.2 and older no longer supported<br/>
+– Minimum Android version bumped to 4.0.1 (Ice Cream Sandwich)<br/>
+– Transmit Morse no longer supported (removes need for camera permission)<br/>
+– ARM64 devices now supported<br/>
+– Bug fixes<br/>
 
 <h3>Older versions</h3>
+
+<h5>Version 2.1 (28 Sep 2015)</h5>
+– Dictionary data packed in the main application APK<br/>
+– Android 2.2 and older no longer supported<br/>
 
 <h5>Version 2.0 (21 Jan 2014)</h5>
 – Help available for all tools<br/>
