--- a/src/main/res/values/strings_semafor.xml
+++ b/src/main/res/values/strings_semafor.xml
@@ -44,7 +44,7 @@ of the variants.</p>
 
 <p>The <i>Encrypt</i> tab can be used to encode an input string into the semaphore alphabet.
 The output can be obtained in a graphical or numeric representation. The former can be exported
-to a PNG file (in black on white background), the latter in plain text, which might be more
+as a PNG file (in black on white background), the latter in plain text, which might be more
 useful if further processed. In the numeric representation, each character is converted to
 a pair of digits in the range 1 through 8 where the numbering is chosen so that A, B, C, …, G
 correspond to 12, 13, 14, …, 18.</p>
