--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -2,15 +2,16 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="MainTheme" parent="@android:style/Theme.Holo">
-        <item name="android:buttonStyle">@style/MainTheme.Button</item>
+        <item name="android:spinnerDropDownItemStyle">@style/MainTheme.SpinnerDropDown</item>
         <item name="android:windowBackground">@android:drawable/screen_background_dark</item>
     </style>
 
-    <style name="MainTheme.NoTitleBar" parent="@android:style/Theme.NoTitleBar">
+    <style name="MainTheme.NoTitleBar" parent="@android:style/Theme.Holo.NoActionBar">
         <item name="android:windowBackground">@android:drawable/screen_background_dark</item>
     </style>
 
-    <style name="MainTheme.Button" parent="@android:style/Widget.Holo.Button">
-        <item name="android:textAppearance">?android:attr/textAppearanceButton</item>
+    <style name="MainTheme.SpinnerDropDown" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
+        <item name="android:textColor">@color/priColor</item>
     </style>
+
 </resources>
