--- a/spa2/src/main/res/layout/main_layout.xml
+++ b/spa2/src/main/res/layout/main_layout.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cz.absolutno.sifry.common.widget.FixedGridLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:sifry="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/glMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    sifry:numColumns="3" />
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
+    <cz.absolutno.sifry.common.widget.FixedGridLayout
+        xmlns:sifry="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/glMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        sifry:numColumns="3" >
+
+    </cz.absolutno.sifry.common.widget.FixedGridLayout>
+</LinearLayout>
