--- a/spa2/src/main/res/values/styles.xml
+++ b/spa2/src/main/res/values/styles.xml
@@ -14,4 +14,8 @@
         <item name="android:textColor">@color/priColor</item>
     </style>
 
+    <style name="MainTheme.FitSystemWindows" parent="MainTheme">
+        <item name="android:fitsSystemWindows">true</item>
+    </style>
+
 </resources>
